--- a/index.html
+++ b/index.html
@@ -26,19 +26,22 @@
             display: flex;
             justify-content: center;
             gap: 20px;
+            flex-wrap: wrap;
         }
 
         nav a {
             color: white;
             text-decoration: none;
+            padding: 5px 10px;
         }
 
         .container {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
             gap: 20px;
             max-width: 900px;
             margin: 20px auto;
+            padding: 0 10px;
         }
 
         .box {
@@ -69,6 +72,29 @@
             text-align: center;
             margin: 20px 0;
             color: #aaaaaa;
+        }
+
+        /* Media Queries for responsiveness */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 1.5rem;
+            }
+            
+            .container {
+                grid-template-columns: 1fr;
+            }
+
+            .box {
+                padding: 15px;
+            }
+
+            nav {
+                gap: 10px;
+            }
+
+            nav a {
+                padding: 8px 15px;
+            }
         }
     </style>
 </head>
@@ -157,7 +183,6 @@
         }
     }
 </script>
-
 
 </body>
 </html>
