--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AZAG Mayden - CV</title>
+    <meta name="description" content="CV d'AZAG Mayden, étudiant en cybersécurité informatique et réseaux en alternance. Découvrez ses compétences, expériences professionnelles et plus encore.">
+    <meta name="keywords" content="CV, AZAG Mayden, cybersécurité, informatique, réseaux, compétences, expériences, alternance, étudiant">
+    <title>AZAG Mayden - CV - Étudiant en Cybersécurité Informatique et Réseaux en Alternance</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
     <style>
         body {
